sam/NetworkingVPCMacro/src/test/fixtures/GetAttVPCOutput.cfn.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Little Orange Minimal VPC",
  "Metadata": { "cfn-lint": { "config": { "ignore_checks": ["E3001"] } } },
  "Parameters": { "VPCCIDR": { "Type": "String" } },
  "Resources": {
    "TransitGatewayAttachment": {
      "Type": "AWS::EC2::TransitGatewayAttachment",
      "Properties": {
        "SubnetIds": [
          {
            "Ref": "VPCNetworkingA"
          },
          {
            "Ref": "VPCNetworkingB"
          }
        ],
        "Tags": [
          {
            "Key": "TransitGateway:AssociateWith",
            "Value": "Test"
          },
          {
            "Key": "TransitGateway:PropagateTo",
            "Value": "Test"
          }
        ],
        "TransitGatewayId": "tgw-xxxx",
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    },
    "TransitGatewayPublicNACLEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "VPCPublicNACL"
        },
        "CidrBlock": "10.1.0.0/16",
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 400
      }
    },
    "TransitGatewayPublicRouteA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.1.0.0/16",
        "RouteTableId": {
          "Ref": "VPCPublicARouteTable"
        },
        "TransitGatewayId": "tgw-xxxx"
      }
    },
    "TransitGatewayPublicRouteB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.1.0.0/16",
        "RouteTableId": {
          "Ref": "VPCPublicBRouteTable"
        },
        "TransitGatewayId": "tgw-xxxx"
      }
    },
    "TransitGatewayPrivateNACLEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "VPCPrivateNACL"
        },
        "CidrBlock": "10.1.0.0/16",
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 400
      }
    },
    "TransitGatewayPrivateRouteA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.1.0.0/16",
        "RouteTableId": {
          "Ref": "VPCPrivateARouteTable"
        },
        "TransitGatewayId": "tgw-xxxx"
      }
    },
    "TransitGatewayPrivateRouteB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.1.0.0/16",
        "RouteTableId": {
          "Ref": "VPCPrivateBRouteTable"
        },
        "TransitGatewayId": "tgw-xxxx"
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/22",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [{ "Key": "Name", "Value": "VPC" }]
      }
    },
    "VPCPublicNACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublic" }]
      }
    },
    "VPCPublicNACLIngress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPublicNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCPublicNACLEgress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPublicNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCPrivateNACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivate" }]
      }
    },
    "VPCPrivateNACLIngress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "Protocol": 6,
        "RuleAction": "allow",
        "RuleNumber": 100,
        "PortRange": { "To": 65535, "From": 1024 }
      }
    },
    "VPCPrivateNACLIngress200": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "Protocol": 17,
        "RuleAction": "allow",
        "RuleNumber": 200,
        "PortRange": { "To": 65535, "From": 1024 }
      }
    },
    "VPCPrivateNACLIngress300": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "CidrBlock": "10.0.0.0/22",
        "Egress": false,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 300
      }
    },
    "VPCPrivateNACLEgress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCRestrictedNACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestricted" }]
      }
    },
    "VPCRestrictedNACLIngress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCRestrictedNACL" },
        "CidrBlock": "10.0.1.0/24",
        "Egress": false,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCRestrictedNACLEgress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCRestrictedNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCNetworkingNACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworking" }]
      }
    },
    "VPCNetworkingNACLIngress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCNetworkingNACL" },
        "CidrBlock": "10.0.0.0/22",
        "Egress": false,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCNetworkingNACLEgress100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCNetworkingNACL" },
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": -1,
        "RuleAction": "allow",
        "RuleNumber": 100
      }
    },
    "VPCPublicA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.0.0/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicA" }]
      }
    },
    "VPCPublicANACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPublicNACL" },
        "SubnetId": { "Ref": "VPCPublicA" }
      }
    },
    "VPCPublicARouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicA" }]
      }
    },
    "VPCPublicARouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPublicARouteTable" },
        "SubnetId": { "Ref": "VPCPublicA" }
      }
    },
    "VPCPublicB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.0.64/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicB" }]
      }
    },
    "VPCPublicBNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPublicNACL" },
        "SubnetId": { "Ref": "VPCPublicB" }
      }
    },
    "VPCPublicBRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicB" }]
      }
    },
    "VPCPublicBRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPublicBRouteTable" },
        "SubnetId": { "Ref": "VPCPublicB" }
      }
    },
    "VPCPublicC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.0.128/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicC" }]
      }
    },
    "VPCPublicCNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPublicNACL" },
        "SubnetId": { "Ref": "VPCPublicC" }
      }
    },
    "VPCPublicCRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPublicC" }]
      }
    },
    "VPCPublicCRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPublicCRouteTable" },
        "SubnetId": { "Ref": "VPCPublicC" }
      }
    },
    "VPCPrivateA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.1.0/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateA" }]
      }
    },
    "VPCPrivateANACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "SubnetId": { "Ref": "VPCPrivateA" }
      }
    },
    "VPCPrivateARouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateA" }]
      }
    },
    "VPCPrivateARouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPrivateARouteTable" },
        "SubnetId": { "Ref": "VPCPrivateA" }
      }
    },
    "VPCPrivateB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.1.64/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateB" }]
      }
    },
    "VPCPrivateBNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "SubnetId": { "Ref": "VPCPrivateB" }
      }
    },
    "VPCPrivateBRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateB" }]
      }
    },
    "VPCPrivateBRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPrivateBRouteTable" },
        "SubnetId": { "Ref": "VPCPrivateB" }
      }
    },
    "VPCPrivateC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.1.128/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateC" }]
      }
    },
    "VPCPrivateCNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCPrivateNACL" },
        "SubnetId": { "Ref": "VPCPrivateC" }
      }
    },
    "VPCPrivateCRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCPrivateC" }]
      }
    },
    "VPCPrivateCRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPrivateCRouteTable" },
        "SubnetId": { "Ref": "VPCPrivateC" }
      }
    },
    "VPCRestrictedA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.2.0/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedA" }]
      }
    },
    "VPCRestrictedANACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCRestrictedNACL" },
        "SubnetId": { "Ref": "VPCRestrictedA" }
      }
    },
    "VPCRestrictedARouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedA" }]
      }
    },
    "VPCRestrictedARouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCRestrictedARouteTable" },
        "SubnetId": { "Ref": "VPCRestrictedA" }
      }
    },
    "VPCRestrictedB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.2.64/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedB" }]
      }
    },
    "VPCRestrictedBNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCRestrictedNACL" },
        "SubnetId": { "Ref": "VPCRestrictedB" }
      }
    },
    "VPCRestrictedBRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedB" }]
      }
    },
    "VPCRestrictedBRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCRestrictedBRouteTable" },
        "SubnetId": { "Ref": "VPCRestrictedB" }
      }
    },
    "VPCRestrictedC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.2.128/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedC" }]
      }
    },
    "VPCRestrictedCNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCRestrictedNACL" },
        "SubnetId": { "Ref": "VPCRestrictedC" }
      }
    },
    "VPCRestrictedCRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCRestrictedC" }]
      }
    },
    "VPCRestrictedCRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCRestrictedCRouteTable" },
        "SubnetId": { "Ref": "VPCRestrictedC" }
      }
    },
    "VPCNetworkingA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.3.0/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingA" }]
      }
    },
    "VPCNetworkingANACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCNetworkingNACL" },
        "SubnetId": { "Ref": "VPCNetworkingA" }
      }
    },
    "VPCNetworkingARouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingA" }]
      }
    },
    "VPCNetworkingARouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCNetworkingARouteTable" },
        "SubnetId": { "Ref": "VPCNetworkingA" }
      }
    },
    "VPCNetworkingB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.3.64/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingB" }]
      }
    },
    "VPCNetworkingBNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCNetworkingNACL" },
        "SubnetId": { "Ref": "VPCNetworkingB" }
      }
    },
    "VPCNetworkingBRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingB" }]
      }
    },
    "VPCNetworkingBRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCNetworkingBRouteTable" },
        "SubnetId": { "Ref": "VPCNetworkingB" }
      }
    },
    "VPCNetworkingC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": "" }] },
        "CidrBlock": "10.0.3.128/26",
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingC" }]
      }
    },
    "VPCNetworkingCNACLAssoc": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": { "Ref": "VPCNetworkingNACL" },
        "SubnetId": { "Ref": "VPCNetworkingC" }
      }
    },
    "VPCNetworkingCRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [{ "Key": "Name", "Value": "VPCNetworkingC" }]
      }
    },
    "VPCNetworkingCRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCNetworkingCRouteTable" },
        "SubnetId": { "Ref": "VPCNetworkingC" }
      }
    }
  },
  "Outputs": {
    "VPCCIDR": { "Value": { "Ref": "VPCCIDR" } },
    "VPCId": { "Description": "VPC ID of VPC", "Value": { "Ref": "VPC" } },
    "VPCPublicTierCIDR": {
      "Description": "IPv4 CIDR of the Public Tier of VPC",
      "Value": "10.0.0.0/24"
    },
    "VPCPublicSubnetIds": {
      "Description": "Subnet IDs of the Public Tier of VPC",
      "Value": {
        "Fn::Join": [
          ",",
          [
            { "Ref": "VPCPublicA" },
            { "Ref": "VPCPublicB" },
            { "Ref": "VPCPublicC" }
          ]
        ]
      }
    },
    "VPCPublicNACLId": {
      "Description": "NACL ID of the Public Tier of VPC",
      "Value": { "Ref": "VPCPublicNACL" }
    },
    "VPCPrivateTierCIDR": {
      "Description": "IPv4 CIDR of the Private Tier of VPC",
      "Value": "10.0.1.0/24"
    },
    "VPCPrivateSubnetIds": {
      "Description": "Subnet IDs of the Private Tier of VPC",
      "Value": {
        "Fn::Join": [
          ",",
          [
            { "Ref": "VPCPrivateA" },
            { "Ref": "VPCPrivateB" },
            { "Ref": "VPCPrivateC" }
          ]
        ]
      }
    },
    "VPCPrivateNACLId": {
      "Description": "NACL ID of the Private Tier of VPC",
      "Value": { "Ref": "VPCPrivateNACL" }
    },
    "VPCRestrictedTierCIDR": {
      "Description": "IPv4 CIDR of the Restricted Tier of VPC",
      "Value": "10.0.2.0/24"
    },
    "VPCRestrictedSubnetIds": {
      "Description": "Subnet IDs of the Restricted Tier of VPC",
      "Value": {
        "Fn::Join": [
          ",",
          [
            { "Ref": "VPCRestrictedA" },
            { "Ref": "VPCRestrictedB" },
            { "Ref": "VPCRestrictedC" }
          ]
        ]
      }
    },
    "VPCRestrictedNACLId": {
      "Description": "NACL ID of the Restricted Tier of VPC",
      "Value": { "Ref": "VPCRestrictedNACL" }
    },
    "VPCNetworkingTierCIDR": {
      "Description": "IPv4 CIDR of the Networking Tier of VPC",
      "Value": "10.0.3.0/24"
    },
    "VPCNetworkingSubnetIds": {
      "Description": "Subnet IDs of the Networking Tier of VPC",
      "Value": {
        "Fn::Join": [
          ",",
          [
            { "Ref": "VPCNetworkingA" },
            { "Ref": "VPCNetworkingB" },
            { "Ref": "VPCNetworkingC" }
          ]
        ]
      }
    },
    "VPCNetworkingNACLId": {
      "Description": "NACL ID of the Networking Tier of VPC",
      "Value": { "Ref": "VPCNetworkingNACL" }
    }
  }
}
